# QBOX

./: CMakeLists.txt  COPYING  QBOX.pro  algothread.cpp  algothread.h  config.txt  dracula.qss  ffthread.cpp  ffthread.h  frmconfig.cpp  frmconfig.h  frmconfig.ui  frmdata.cpp  frmdata.h  frmdata.ui  frmdefence.cpp  frmdefence.h  frmdefence.ui  frmhost.cpp  frmhost.h  frmhost.ui  frmlogin.cpp  frmlogin.h  frmlogin.ui  frmlogout.cpp  frmlogout.h  frmlogout.ui  frmmain.cpp  frmmain.h  frmmain.ui  frmpwd.cpp  frmpwd.h  frmpwd.ui  frmselect.cpp  frmselect.h  host-same.json  host.json  host_good.json  imageWin.cpp  imageWin.h  (+13 more)
image/: host.json
include/: DeepFace.hpp  DeepPlate.hpp  ErrorCode.hpp  FaceType.hpp  Helmet.hpp  Masks.hpp  ObjectType.hpp  Pedestrian.hpp  QType.hpp  Smoke.hpp
